// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/drawer/demo/basic-right.md correctly 1`] = `
<div>
  <button
    class="alu-btn alu-btn-primary"
    type="button"
  >
    <span>
      Open
    </span>
  </button>
</div>
`;

exports[`renders ./components/drawer/demo/form-in-drawer.md correctly 1`] = `
<div>
  <button
    class="alu-btn alu-btn-primary"
    type="button"
  >
    <i
      class="anticon anticon-plus"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="plus"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M848 474H550V152h-76v322H176c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h298v322h76V550h298c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </i>
    <span>
       New account
    </span>
  </button>
</div>
`;

exports[`renders ./components/drawer/demo/multi-level-drawer.md correctly 1`] = `
<div>
  <button
    class="alu-btn alu-btn-primary"
    type="button"
  >
    <span>
      Open drawer
    </span>
  </button>
</div>
`;

exports[`renders ./components/drawer/demo/placement.md correctly 1`] = `
<div>
  <div
    class="alu-radio-group alu-radio-group-outline"
    style="margin-right:8px"
  >
    <label
      class="alu-radio-wrapper"
    >
      <span
        class="alu-radio"
      >
        <input
          class="alu-radio-input"
          type="radio"
          value="top"
        />
        <span
          class="alu-radio-inner"
        />
      </span>
      <span>
        top
      </span>
    </label>
    <label
      class="alu-radio-wrapper"
    >
      <span
        class="alu-radio"
      >
        <input
          class="alu-radio-input"
          type="radio"
          value="right"
        />
        <span
          class="alu-radio-inner"
        />
      </span>
      <span>
        right
      </span>
    </label>
    <label
      class="alu-radio-wrapper"
    >
      <span
        class="alu-radio"
      >
        <input
          class="alu-radio-input"
          type="radio"
          value="bottom"
        />
        <span
          class="alu-radio-inner"
        />
      </span>
      <span>
        bottom
      </span>
    </label>
    <label
      class="alu-radio-wrapper alu-radio-wrapper-checked"
    >
      <span
        class="alu-radio alu-radio-checked"
      >
        <input
          checked=""
          class="alu-radio-input"
          type="radio"
          value="left"
        />
        <span
          class="alu-radio-inner"
        />
      </span>
      <span>
        left
      </span>
    </label>
  </div>
  <button
    class="alu-btn alu-btn-primary"
    type="button"
  >
    <span>
      Open
    </span>
  </button>
</div>
`;

exports[`renders ./components/drawer/demo/user-profile.md correctly 1`] = `
<div>
  <div
    class="alu-list alu-list-split alu-list-bordered"
  >
    <div
      class="alu-spin-nested-loading"
    >
      <div
        class="alu-spin-container"
      >
        <div
          class="alu-list-item"
        >
          <div
            class="alu-list-item-meta"
          >
            <div
              class="alu-list-item-meta-avatar"
            >
              <span
                class="alu-avatar alu-avatar-circle alu-avatar-image"
              >
                <img
                  src="https://gw.alipayobjects.com/zos/rmsportal/BiazfanxmamNRoxxVxka.png"
                />
              </span>
            </div>
            <div
              class="alu-list-item-meta-content"
            >
              <h4
                class="alu-list-item-meta-title"
              >
                <a
                  href="https://ant.design/index-cn"
                >
                  Lily
                </a>
              </h4>
              <div
                class="alu-list-item-meta-description"
              >
                Progresser AFX
              </div>
            </div>
          </div>
          <ul
            class="alu-list-item-action"
          >
            <li>
              <a>
                View Profile
              </a>
            </li>
          </ul>
        </div>
        <div
          class="alu-list-item"
        >
          <div
            class="alu-list-item-meta"
          >
            <div
              class="alu-list-item-meta-avatar"
            >
              <span
                class="alu-avatar alu-avatar-circle alu-avatar-image"
              >
                <img
                  src="https://gw.alipayobjects.com/zos/rmsportal/BiazfanxmamNRoxxVxka.png"
                />
              </span>
            </div>
            <div
              class="alu-list-item-meta-content"
            >
              <h4
                class="alu-list-item-meta-title"
              >
                <a
                  href="https://ant.design/index-cn"
                >
                  Lily
                </a>
              </h4>
              <div
                class="alu-list-item-meta-description"
              >
                Progresser AFX
              </div>
            </div>
          </div>
          <ul
            class="alu-list-item-action"
          >
            <li>
              <a>
                View Profile
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
